# Sid-OCRL-Project

./: .gitignore  GUI.EmbeddedSystems.Gantry.GantryController_10_08_2023_13_01_59  GUI.EmbeddedSystems.Gantry.GantryController_10_08_2023_13_15_03  GUI.EmbeddedSystems.Gantry.GantryController_10_08_2023_13_25_17  GUI.EmbeddedSystems.Gantry.GantryController_10_08_2023_13_32_40  GUI.EmbeddedSystems.Gantry.GantryController_10_08_2023_13_44_13  GUI.EmbeddedSystems.Gantry.GantryController_10_08_2023_13_50_59  GUI.EmbeddedSystems.Gantry.GantryController_10_08_2023_13_56_49  GUI.EmbeddedSystems.JoyCon.JoyCon_10_08_2023_13_02_00  GUI.EmbeddedSystems.JoyCon.JoyCon_10_08_2023_13_15_03  GUI.EmbeddedSystems.JoyCon.JoyCon_10_08_2023_13_22_45  GUI.EmbeddedSystems.JoyCon.JoyCon_10_08_2023_13_25_18  GUI.EmbeddedSystems.JoyCon.JoyCon_10_08_2023_13_29_28  GUI.EmbeddedSystems.JoyCon.JoyCon_10_08_2023_13_42_00  GUI.EmbeddedSystems.JoyCon.JoyCon_10_08_2023_13_44_13  GUI.EmbeddedSystems.JoyCon.JoyCon_10_08_2023_13_56_49  GUI.EmbeddedSystems.SoftGrasper.SoftGrasper_10_08_2023_13_01_59  GUI.EmbeddedSystems.SoftGrasper.SoftGrasper_10_08_2023_13_15_03  GUI.EmbeddedSystems.SoftGrasper.SoftGrasper_10_08_2023_13_22_45  GUI.EmbeddedSystems.SoftGrasper.SoftGrasper_10_08_2023_13_25_17  GUI.EmbeddedSystems.SoftGrasper.SoftGrasper_10_08_2023_13_41_59  GUI.EmbeddedSystems.SoftGrasper.SoftGrasper_10_08_2023_13_44_13  GUI.EmbeddedSystems.SoftGrasper.SoftGrasper_10_08_2023_13_53_36  GUI.EmbeddedSystems.SoftGrasper.SoftGrasper_10_08_2023_13_56_49  GenerateRandomSequence.py  Hardware.py  HardwareDatalog_10_08_2023_13_02_00  HardwareDatalog_10_08_2023_13_25_18  HardwareDatalog_10_08_2023_13_32_41  HardwareDatalog_10_08_2023_13_51_00  HardwareDatalog_10_08_2023_13_53_37  Hardware_10_08_2023_12_55_34  Hardware_10_08_2023_12_56_51  Hardware_10_08_2023_13_02_00  Hardware_10_08_2023_13_07_37  Hardware_10_08_2023_13_22_45  Hardware_10_08_2023_13_25_18  Hardware_10_08_2023_13_32_41  Hardware_10_08_2023_13_42_00  Hardware_10_08_2023_13_44_13  (+12 more)
Deformable_Object_Tests/: Hardware_SNS_Deformable.py  Hardware_SNS_Deformable_bareboneCheck.py  SNS_Deformable_Test.py
Embedded Systems/: CheckJoystick.py  Main.py
EmbeddedSystems/: CheckJoystick.py  CheckJoystickTiming.txt  latest_tutorial.prof
GUI/: __init__.py  app_dead.py  events.py  gantry.py  routes.py
Project_CPP/: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  main.cpp  toolchain-mingw.cmake
Project_CPP/robot_arm_3/: CMakeLists.txt  package.xml
Project_CPP/robot_arm_3/config/: joint_names_robot_arm_3.yaml
Project_CPP/robot_arm_3/meshes/: l2.STL  l4.STL
Project_CPP/robot_arm_3/urdf/: end_eff.STL  l3.STL  robot_arm_3.csv  robot_arm_3.urdf
Pybullet/: Robot_Init.py  calc_M_N.m  compute_C.m  compute_M.m  compute_N.m  coriolis.m  forward_dynamics.m  g2twist.m  getR_xT_x.m  getR_yT_y.m  getR_zT_z.m  init.py  meshcat_utils_dp.py  pd_control.py  rk4_dyn.m  skew2angvel.m  test.cpp  test.py  (+2 more)
(+4458 files in other folders)
